--- a/propensity-score/propensity-score-basic.ipynb
+++ b/propensity-score/propensity-score-basic.ipynb
@@ -9,15 +9,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import scipy as sp\n",
-    "import matplotlib.pyplot as plt\n",
-    "%matplotlib inline\n",
     "import sklearn\n",
     "import statsmodels.api as sm\n",
     "import random\n",
@@ -31,11 +28,10 @@
     "from sklearn.decomposition import PCA\n",
     "from sklearn.ensemble import RandomForestRegressor, GradientBoostingRegressor\n",
     "from sklearn.feature_selection import SelectFromModel, SelectKBest\n",
-    "from sklearn.grid_search import GridSearchCV, RandomizedSearchCV\n",
     "from sklearn.kernel_ridge import KernelRidge\n",
     "from sklearn.linear_model import LogisticRegression, LinearRegression, ElasticNet, Ridge\n",
     "from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score, roc_curve, auc, confusion_matrix, precision_recall_curve\n",
-    "from sklearn.model_selection import KFold, TimeSeriesSplit\n",
+    "from sklearn.model_selection import KFold, TimeSeriesSplit, GridSearchCV, RandomizedSearchCV\n",
     "from sklearn.preprocessing import StandardScaler, RobustScaler, Normalizer\n",
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.svm import SVR, LinearSVR"
@@ -57,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +119,7 @@
        "Yes       2236  1486"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +140,7 @@
        "0.050721150622586864"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +176,7 @@
     "X = X.drop(categorical_columns, axis=1)\n",
     "\n",
     "### 切片の導入\n",
-    "X[\"Intercept\"] = 1\n",
+    "X.loc[:,\"Intercept\"] = 1\n",
     "\n",
     "### RHC有無のダミー変数\n",
     "z1 = pd.get_dummies(data_df[\"swang1\"])[\"RHC\"]\n",
@@ -191,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 19,
    "metadata": {
     "scrolled": true
    },
@@ -230,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +244,7 @@
        "0.7963133740379587"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,14 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +266,7 @@
        "0.05907512789883507"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,14 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +361,7 @@
        "1           428   312"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -391,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +382,7 @@
        "0.002202143595586223"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -412,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +403,7 @@
        "-1.4845493913116865"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -433,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +424,7 @@
        "-629.6405765396544"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -454,31 +436,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/anaconda3/lib/python3.6/site-packages/ipykernel_launcher.py:8: SettingWithCopyWarning:\n",
-      "\n",
-      "\n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "\n"
-     ]
-    }
-   ],
    "source": [
     "### 説明変数\n",
     "cols = [\"age\", \"sex\", \"TVwatch_day\", \"marry_dummy\", \"child_dummy\", \"inc\", \"pmoney\", \"area_kanto\", \"area_tokai\",\n",
@@ -487,7 +447,7 @@
     "X = data_df[cols]\n",
     "\n",
     "### 切片の導入\n",
-    "X[\"Intercept\"] = 1\n",
+    "X.loc[:,\"Intercept\"] = 1\n",
     "\n",
     "### CM視聴有無ダミー\n",
     "z1 = data_df.cm_dummy\n",
@@ -500,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -525,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -536,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -545,7 +505,7 @@
        "0.7917012811992321"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -558,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -567,7 +527,7 @@
        "0.032311773305120556"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -582,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -591,7 +551,7 @@
        "5.349029566474508"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -606,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -615,7 +575,7 @@
        "1513.69969078248"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
