--- a/propensity-score/propensity-score-basic.ipynb
+++ b/propensity-score/propensity-score-basic.ipynb
@@ -53,18 +53,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### データの読み込み\n",
+    "# データの読み込み\n",
     "data_df = pd.read_csv(\"http://biostat.mc.vanderbilt.edu/wiki/pub/Main/DataSets/rhc.csv\")\n",
     "#data_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -119,19 +119,19 @@
        "Yes       2236  1486"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "### 死亡率とRHCの有無のクロス集計\n",
+    "# 死亡率とRHCの有無のクロス集計\n",
     "pd.crosstab(data_df.death, data_df.swang1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -140,54 +140,54 @@
        "0.050721150622586864"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "### RHCの有無での死亡率の差を計算\n",
+    "# RHCの有無での死亡率の差を計算\n",
     "(1486 / (698 + 1486)) - (2236 / (1315 + 2236))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### 用いる説明変数群、詳細はデータセットの記述を参照\n",
-    "cols = [\"cat1\", \"sex\", \"race\", \"edu\", \"income\", \n",
-    "        \"resp\", \"card\", \"neuro\", \"gastr\", \"renal\", \"meta\", \"hema\", \"seps\", \"trauma\", \"ortho\", \n",
+    "# 用いる説明変数群、詳細はデータセットの記述を参照\n",
+    "cols = [\"cat1\", \"sex\", \"race\", \"edu\", \"income\",\n",
+    "        \"resp\", \"card\", \"neuro\", \"gastr\", \"renal\", \"meta\", \"hema\", \"seps\", \"trauma\", \"ortho\",\n",
     "        \"das2d3pc\", \"dnr1\", \"ca\", \"surv2md1\", \"aps1\", \"scoma1\", \"wtkilo1\", \"temp1\",\n",
     "        \"resp1\", \"hrt1\", \"pafi1\", \"paco21\", \"ph1\", \"wblc1\", \"hema1\", \"sod1\", \"pot1\", \"crea1\",\n",
     "        \"bili1\", \"alb1\", \"cardiohx\", \"chfhx\", \"dementhx\", \"psychhx\", \"chrpulhx\", \"renalhx\",\n",
     "        \"liverhx\", \"gibledhx\", \"immunhx\", \"transhx\", \"amihx\",\n",
     "        \"age\", \"meanbp1\"]\n",
     "\n",
-    "### 説明変数中のカテゴリカル変数\n",
-    "categorical_columns = [\"cat1\", \"sex\", \"race\", \"edu\", \"income\",\"ca\", \"dnr1\",\n",
+    "# 説明変数中のカテゴリカル変数\n",
+    "categorical_columns = [\"cat1\", \"sex\", \"race\", \"edu\", \"income\", \"ca\", \"dnr1\",\n",
     "                       \"resp\", \"card\", \"neuro\", \"gastr\", \"renal\", \"meta\", \"hema\", \"seps\", \"trauma\", \"ortho\"]\n",
     "\n",
-    "### カテゴリカル変数のダミー化\n",
+    "# カテゴリカル変数のダミー化\n",
     "X = data_df[cols]\n",
     "dummy = pd.get_dummies(X[categorical_columns], drop_first=True)\n",
     "X = pd.concat([X, dummy], axis=1)\n",
     "X = X.drop(categorical_columns, axis=1)\n",
     "\n",
-    "### 切片の導入\n",
-    "X.loc[:,\"Intercept\"] = 1\n",
+    "# 切片の導入\n",
+    "X.loc[:, \"Intercept\"] = 1\n",
     "\n",
-    "### RHC有無のダミー変数\n",
+    "# RHC有無のダミー変数\n",
     "z1 = pd.get_dummies(data_df[\"swang1\"])[\"RHC\"]\n",
     "\n",
-    "### 目的変数\n",
+    "# 目的変数\n",
     "y = pd.get_dummies(data_df[\"death\"])[\"Yes\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -217,7 +217,7 @@
     }
    ],
    "source": [
-    "### StatsModelsのLogitにより傾向スコアを推定\n",
+    "# StatsModelsのLogitにより傾向スコアを推定\n",
     "glm = sm.Logit(z1, X)\n",
     "result = glm.fit()\n",
     "ps = result.predict(X)\n",
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -244,20 +244,20 @@
        "0.7963133740379587"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "### c統計量としてAUCをを計算\n",
+    "# c統計量としてAUCをを計算\n",
     "fpr, tpr, thresholds = roc_curve(z1, ps)\n",
     "auc(fpr, tpr)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -266,15 +266,15 @@
        "0.05907512789883507"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "### IPWによりATEを推定\n",
-    "ipwe1 = sum((z1*y)/ps)/sum(z1/ps) \n",
-    "ipwe0 = sum(((1-z1)*y)/(1-ps))/sum((1-z1)/(1-ps)) \n",
+    "# IPWによりATEを推定\n",
+    "ipwe1 = sum((z1 * y) / ps) / sum(z1 / ps)\n",
+    "ipwe0 = sum(((1 - z1) * y) / (1 - ps)) / sum((1 - z1) / (1 - ps))\n",
     "ATE = ipwe1 - ipwe0\n",
     "ATE"
    ]
@@ -295,18 +295,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### データの読み込み\n",
+    "# データの読み込み\n",
     "data_df = pd.read_csv('https://github.com/iwanami-datascience/vol3/raw/master/kato%26hoshino/q_data_x.csv')\n",
     "#data_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -361,19 +361,19 @@
        "1           428   312"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "### アプリ利用ダミーとCM視聴有無のクロス集計\n",
+    "# アプリ利用ダミーとCM視聴有無のクロス集計\n",
     "pd.crosstab(data_df.gamedummy, data_df.cm_dummy)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -382,19 +382,19 @@
        "0.002202143595586223"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "### CM視聴有無でのアプリ利用率の差を計算\n",
+    "# CM視聴有無でのアプリ利用率の差を計算\n",
     "(312 / (3832 + 312)) - (428 / (5428 + 428))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -403,19 +403,19 @@
        "-1.4845493913116865"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "### CM視聴有無でのアプリ利用回数の差を計算\n",
+    "# CM視聴有無でのアプリ利用回数の差を計算\n",
     "data_df[data_df.cm_dummy == 1].gamecount.mean() - data_df[data_df.cm_dummy == 0].gamecount.mean()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -424,35 +424,36 @@
        "-629.6405765396544"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "### CM視聴有無でのアプリ利用時間の差を計算\n",
+    "# CM視聴有無でのアプリ利用時間の差を計算\n",
     "data_df[data_df.cm_dummy == 1].gamesecond.mean() - data_df[data_df.cm_dummy == 0].gamesecond.mean()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### 説明変数\n",
-    "cols = [\"age\", \"sex\", \"TVwatch_day\", \"marry_dummy\", \"child_dummy\", \"inc\", \"pmoney\", \"area_kanto\", \"area_tokai\",\n",
-    "        \"area_keihanshin\", \"job_dummy1\", \"job_dummy2\", \"job_dummy3\", \"job_dummy4\", \"job_dummy5\", \"job_dummy6\",\n",
+    "# 説明変数\n",
+    "cols = [\"age\", \"sex\", \"TVwatch_day\", \"marry_dummy\", \"child_dummy\", \"inc\", \"pmoney\",\n",
+    "        \"area_kanto\", \"area_tokai\", \"area_keihanshin\",\n",
+    "        \"job_dummy1\", \"job_dummy2\", \"job_dummy3\", \"job_dummy4\", \"job_dummy5\", \"job_dummy6\",\n",
     "        \"fam_str_dummy1\", \"fam_str_dummy2\", \"fam_str_dummy3\", \"fam_str_dummy4\"]\n",
-    "X = data_df[cols]\n",
+    "X = data_df[cols].copy()\n",
     "\n",
-    "### 切片の導入\n",
-    "X.loc[:,\"Intercept\"] = 1\n",
+    "# 切片の導入\n",
+    "X.loc[:, \"Intercept\"] = 1\n",
     "\n",
-    "### CM視聴有無ダミー\n",
+    "# CM視聴有無ダミー\n",
     "z1 = data_df.cm_dummy\n",
     "\n",
-    "### 目的変数群（1:アプリ利用ダミー, 2:アプリ利用回数、3:アプリ利用時間）\n",
+    "# 目的変数群（1:アプリ利用ダミー, 2:アプリ利用回数、3:アプリ利用時間）\n",
     "y1 = data_df.gamedummy\n",
     "y2 = data_df.gamecount\n",
     "y3 = data_df.gamesecond"
@@ -460,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
@@ -476,7 +477,7 @@
     }
    ],
    "source": [
-    "### StatsModelsのLogitにより傾向スコアを推定\n",
+    "# StatsModelsのLogitにより傾向スコアを推定\n",
     "glm = sm.Logit(z1, X)\n",
     "result = glm.fit()\n",
     "ps = result.predict(X)\n",
@@ -485,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {
     "scrolled": true
    },
@@ -496,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -505,20 +506,20 @@
        "0.7917012811992321"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "### c統計量としてAUCをを計算\n",
+    "# c統計量としてAUCをを計算\n",
     "fpr, tpr, thresholds = roc_curve(z1, ps)\n",
     "auc(fpr, tpr)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -527,22 +528,22 @@
        "0.032311773305120556"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "### IPWによりアプリ利用ダミーへのATEを推定\n",
-    "ipwe11 = sum((z1*y1)/ps)/sum(z1/ps) ## Treated\n",
-    "ipwe10 = sum(((1-z1)*y1)/(1-ps))/sum((1-z1)/(1-ps)) ## Control\n",
-    "ATE1 = ipwe11 - ipwe10 \n",
+    "# IPWによりアプリ利用ダミーへのATEを推定\n",
+    "ipwe11 = sum((z1 * y1) / ps) / sum(z1 / ps)  # Treated\n",
+    "ipwe10 = sum(((1 - z1) * y1) / (1 - ps)) / sum((1 - z1) / (1 - ps))  # Control\n",
+    "ATE1 = ipwe11 - ipwe10\n",
     "ATE1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -551,22 +552,22 @@
        "5.349029566474508"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "### IPWによりアプリ利用回数へのATEを推定\n",
-    "ipwe21 = sum((z1*y2)/ps)/sum(z1/ps) ## Treated\n",
-    "ipwe20 = sum(((1-z1)*y2)/(1-ps))/sum((1-z1)/(1-ps)) ## Control\n",
+    "# IPWによりアプリ利用回数へのATEを推定\n",
+    "ipwe21 = sum((z1 * y2) / ps) / sum(z1 / ps)  # Treated\n",
+    "ipwe20 = sum(((1 - z1) * y2) / (1 - ps)) / sum((1 - z1) / (1 - ps))  # Control\n",
     "ATE2 = ipwe21 - ipwe20\n",
     "ATE2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -575,16 +576,16 @@
        "1513.69969078248"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "### IPWによりアプリ利用時間へのATEを推定\n",
-    "ipwe31 = sum((z1*y3)/ps)/sum(z1/ps) \n",
-    "ipwe30 = sum(((1-z1)*y3)/(1-ps))/sum((1-z1)/(1-ps)) \n",
-    "ATE3 = ipwe31 - ipwe30 \n",
+    "# IPWによりアプリ利用時間へのATEを推定\n",
+    "ipwe31 = sum((z1 * y3) / ps) / sum(z1 / ps)\n",
+    "ipwe30 = sum(((1 - z1) * y3) / (1 - ps)) / sum((1 - z1) / (1 - ps))\n",
+    "ATE3 = ipwe31 - ipwe30\n",
     "ATE3"
    ]
   },
