--- a/uplift-modeling/adj-uplift-modeling1.ipynb
+++ b/uplift-modeling/adj-uplift-modeling1.ipynb
@@ -53,7 +53,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### データの読み込み\n",
+    "# データの読み込み\n",
     "data_df = pd.read_csv('https://github.com/iwanami-datascience/vol3/raw/master/kato%26hoshino/q_data_x.csv')\n",
     "#data_df.head()"
    ]
@@ -64,8 +64,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### 説明変数と目的変数を指定\n",
-    "cols = [\"child_dummy\", \"area_kanto\", \"area_tokai\", \"area_keihanshin\", \n",
+    "# 説明変数と目的変数を指定\n",
+    "cols = [\"child_dummy\", \"area_kanto\", \"area_tokai\", \"area_keihanshin\",\n",
     "        \"T\", \"F1\", \"F2\", \"F3\", \"M1\", \"M2\"]\n",
     "\n",
     "X = data_df[cols]\n",
@@ -78,7 +78,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### CMありをtreatment, CMなしをcontrolとする\n",
+    "# CMありをtreatment, CMなしをcontrolとする\n",
     "treat = (data_df.cm_dummy == 1).tolist()"
    ]
   },
@@ -88,8 +88,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### train, test半分ずつに分ける\n",
-    "y_train, y_test, train_treat, test_treat, X_train, X_test = train_test_split(y.values,treat,X,test_size=0.5,random_state=2)"
+    "# train, test半分ずつに分ける\n",
+    "y_train, y_test, train_treat, test_treat, X_train, X_test = train_test_split(y.values, treat, X, test_size=0.5, random_state=2)"
    ]
   },
   {
@@ -98,7 +98,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### indexをリセット\n",
+    "# indexをリセット\n",
     "X_train = X_train.reset_index(drop=True)\n",
     "X_test = X_test.reset_index(drop=True)"
    ]
@@ -109,13 +109,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### Separate Model Approach\n",
-    "## 学習用に用いるデータを生成\n",
+    "# Separate Model Approach\n",
+    "# 学習用に用いるデータを生成\n",
     "num = len(y_train)\n",
-    "treat_y = np.reshape(np.array([y_train[i] for i in range(num) if train_treat[i] == True]), -1)\n",
-    "control_y = np.reshape(np.array([y_test[i] for i in range(num) if train_treat[i] == False]), -1)\n",
-    "treat_X = DataFrame([X_train.loc[i] for i in range(num) if train_treat[i] == True])\n",
-    "control_X = DataFrame([X_train.loc[i] for i in range(num) if train_treat[i] == False])"
+    "treat_y = np.reshape(np.array([y_train[i] for i in range(num) if train_treat[i] is True]), -1)\n",
+    "control_y = np.reshape(np.array([y_test[i] for i in range(num) if train_treat[i] is False]), -1)\n",
+    "treat_X = DataFrame([X_train.loc[i] for i in range(num) if train_treat[i] is True])\n",
+    "control_X = DataFrame([X_train.loc[i] for i in range(num) if train_treat[i] is False])"
    ]
   },
   {
@@ -147,14 +147,14 @@
     }
    ],
    "source": [
-    "### ランダムフォレスト回帰を用いる\n",
-    "params_rf = {\"max_depth\":[10,50,100,200,500]}\n",
+    "# ランダムフォレスト回帰を用いる\n",
+    "params_rf = {\"max_depth\": [10, 50, 100, 200, 500]}\n",
     "gs_rf_treat = GridSearchCV(RandomForestRegressor(n_estimators=500),\n",
-    "                           param_grid=params_rf,cv=5)\n",
+    "                           param_grid=params_rf, cv=5)\n",
     "gs_rf_control = GridSearchCV(RandomForestRegressor(n_estimators=500),\n",
-    "                             param_grid=params_rf,cv=5)\n",
+    "                             param_grid=params_rf, cv=5)\n",
     "\n",
-    "### 介入群と非介入群それぞれでパラメータチューニング及びスマホアプリ利用時間を予測するモデルを構築\n",
+    "# 介入群と非介入群それぞれでパラメータチューニング及びスマホアプリ利用時間を予測するモデルを構築\n",
     "gs_rf_treat.fit(treat_X, treat_y)\n",
     "gs_rf_control.fit(control_X, control_y)"
    ]
@@ -165,14 +165,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### uplift-scoreの算出\n",
-    "## CMを見た場合のアプリ利用時間\n",
+    "# uplift-scoreの算出\n",
+    "# CMを見た場合のアプリ利用時間\n",
     "pred_treat = gs_rf_treat.predict(X_test)\n",
     "\n",
-    "## CMを見なかった場合のアプリ利用時間\n",
+    "# CMを見なかった場合のアプリ利用時間\n",
     "pred_control = gs_rf_control.predict(X_test)\n",
     "\n",
-    "## 今回は、(CMを見た場合のアプリ利用時間) - (CMを見なかった場合のアプリ利用時間) をuplift_scoreとする。\n",
+    "# 今回は、(CMを見た場合のアプリ利用時間) - (CMを見なかった場合のアプリ利用時間) をuplift_scoreとする。\n",
     "uplift_score = pred_treat - pred_control"
    ]
   },
@@ -226,16 +226,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "child_dummy / 977.2688\n",
-      "area_kanto / -1516.0004\n",
-      "area_tokai / -3030.0692\n",
-      "area_keihanshin / 551.5799\n",
-      "T / 12165.5144\n",
-      "F1 / 1234.037\n",
-      "F2 / 1782.0532\n",
-      "F3 / 970.1624\n",
-      "M1 / 2589.4751\n",
-      "M2 / 3362.6475\n"
+      "child_dummy / 929.3386\n",
+      "area_kanto / -1396.441\n",
+      "area_tokai / -3068.5063\n",
+      "area_keihanshin / 635.3306\n",
+      "T / 12180.1861\n",
+      "F1 / 1299.7327\n",
+      "F2 / 1779.0302\n",
+      "F3 / 895.7932\n",
+      "M1 / 2782.9887\n",
+      "M2 / 3498.1391\n"
      ]
     }
    ],
@@ -264,7 +264,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### データの読み込み\n",
+    "# データの読み込み\n",
     "data_df = pd.read_csv('https://github.com/iwanami-datascience/vol3/raw/master/kato%26hoshino/q_data_x.csv')\n",
     "#data_df.head()"
    ]
@@ -275,19 +275,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "###傾向スコアを求める\n",
-    "## 説明変数\n",
-    "cols_ = [\"age\", \"sex\", \"TVwatch_day\", \"marry_dummy\", \"child_dummy\", \"inc\", \"pmoney\", \n",
-    "         \"area_kanto\", \"area_tokai\",\"area_keihanshin\", \n",
+    "# 傾向スコアを求める\n",
+    "# 説明変数\n",
+    "cols_ = [\"age\", \"sex\", \"TVwatch_day\", \"marry_dummy\", \"child_dummy\", \"inc\", \"pmoney\",\n",
+    "         \"area_kanto\", \"area_tokai\", \"area_keihanshin\",\n",
     "         \"job_dummy1\", \"job_dummy2\", \"job_dummy3\", \"job_dummy4\", \"job_dummy5\", \"job_dummy6\",\n",
-    "         \"fam_str_dummy1\", \"fam_str_dummy2\", \"fam_str_dummy3\",\"fam_str_dummy4\"]\n",
+    "         \"fam_str_dummy1\", \"fam_str_dummy2\", \"fam_str_dummy3\", \"fam_str_dummy4\"]\n",
     "\n",
     "X_ = data_df[cols_].copy()\n",
     "\n",
-    "## 切片の導入\n",
-    "X_.loc[:,\"Intercept\"] = 1\n",
+    "# 切片の導入\n",
+    "X_.loc[:, \"Intercept\"] = 1\n",
     "\n",
-    "## CM視聴有無ダミー\n",
+    "# CM視聴有無ダミー\n",
     "z1 = data_df.cm_dummy"
    ]
   },
@@ -307,7 +307,7 @@
     }
    ],
    "source": [
-    "## StatsModelsのLogitにより傾向スコアを推定\n",
+    "# StatsModelsのLogitにより傾向スコアを推定\n",
     "glm = sm.Logit(z1, X_)\n",
     "result = glm.fit()\n",
     "ps = result.predict(X_)\n",
@@ -322,11 +322,11 @@
    },
    "outputs": [],
    "source": [
-    "### Propensity Scoreで補正された目的変数のカラムを作成\n",
+    "# Propensity Scoreで補正された目的変数のカラムを作成\n",
     "data_df.loc[:, \"ps\"] = ps\n",
     "data_df.loc[:, \"adj_gamesecond\"] = 0\n",
-    "data_df.loc[data_df.cm_dummy == 1, \"adj_gamesecond\"] =  data_df.loc[data_df.cm_dummy == 1, \"gamesecond\"] / data_df.loc[data_df.cm_dummy == 1, \"ps\"]\n",
-    "data_df.loc[data_df.cm_dummy == 0, \"adj_gamesecond\"] =  -data_df.loc[data_df.cm_dummy == 0, \"gamesecond\"] / (1-data_df.loc[data_df.cm_dummy == 0, \"ps\"])\n",
+    "data_df.loc[data_df.cm_dummy == 1, \"adj_gamesecond\"] = data_df.loc[data_df.cm_dummy == 1, \"gamesecond\"] / data_df.loc[data_df.cm_dummy == 1, \"ps\"]\n",
+    "data_df.loc[data_df.cm_dummy == 0, \"adj_gamesecond\"] = -data_df.loc[data_df.cm_dummy == 0, \"gamesecond\"] / (1 - data_df.loc[data_df.cm_dummy == 0, \"ps\"])\n",
     "adj_y = data_df[[\"gamesecond\", \"adj_gamesecond\"]]"
    ]
   },
@@ -336,7 +336,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### CMありをtreatment, CMなしをcontrolとする\n",
+    "# CMありをtreatment, CMなしをcontrolとする\n",
     "treat = (data_df.cm_dummy == 1).tolist()"
    ]
   },
@@ -346,8 +346,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### train, test半分ずつに分ける\n",
-    "adj_y_train, adj_y_test, train_treat, test_treat, X_train, X_test = train_test_split(adj_y,treat,X,test_size=0.5,random_state=2)"
+    "# train, test半分ずつに分ける\n",
+    "adj_y_train, adj_y_test, train_treat, test_treat, X_train, X_test = train_test_split(adj_y, treat, X, test_size=0.5, random_state=2)"
    ]
   },
   {
@@ -356,7 +356,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### indexをリセット\n",
+    "# indexをリセット\n",
     "X_train = X_train.reset_index(drop=True)\n",
     "X_test = X_test.reset_index(drop=True)\n",
     "adj_y_train = adj_y_train.reset_index(drop=True)\n",
@@ -369,15 +369,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### ランダムフォレスト回帰を用いる\n",
-    "params_rf = {\"max_depth\":[10,50,100,200,500]}\n",
-    "gs_rf = GridSearchCV(RandomForestRegressor(n_estimators=500),\n",
-    "                     param_grid=params_rf,cv=5)\n",
+    "# ランダムフォレスト回帰を用いる\n",
+    "params_rf = {\"max_depth\": [10, 50, 100, 200, 500]}\n",
+    "gs_rf = GridSearchCV(RandomForestRegressor(n_estimators=500), param_grid=params_rf, cv=5)\n",
     "\n",
-    "### パラメータチューニング及び補正スマホアプリ利用時間を予測するモデルを構築\n",
-    "gs_rf.fit(X_train,adj_y_train.adj_gamesecond)\n",
+    "# パラメータチューニング及び補正スマホアプリ利用時間を予測するモデルを構築\n",
+    "gs_rf.fit(X_train, adj_y_train.adj_gamesecond)\n",
     "\n",
-    "### 補正uplift_scoreを求める\n",
+    "# 補正uplift_scoreを求める\n",
     "adj_uplift_score = gs_rf.predict(X_test)"
    ]
   },
@@ -431,16 +430,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "child_dummy / -7608.9853\n",
-      "area_kanto / -2585.4107\n",
-      "area_tokai / -4459.0262\n",
-      "area_keihanshin / 11156.2133\n",
-      "T / 4450.7031\n",
-      "F1 / 412.1042\n",
-      "F2 / 3012.7645\n",
-      "F3 / -612.99\n",
-      "M1 / -5603.3779\n",
-      "M2 / 11165.0668\n"
+      "child_dummy / -7845.8122\n",
+      "area_kanto / -2572.0754\n",
+      "area_tokai / -4473.9973\n",
+      "area_keihanshin / 11648.8147\n",
+      "T / 4738.0588\n",
+      "F1 / 465.9719\n",
+      "F2 / 3207.2909\n",
+      "F3 / -630.0232\n",
+      "M1 / -5634.8067\n",
+      "M2 / 11468.2376\n"
      ]
     }
    ],
