--- a/uplift-modeling/adj-uplift-modeling2.ipynb
+++ b/uplift-modeling/adj-uplift-modeling2.ipynb
@@ -60,7 +60,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### データの読み込み\n",
+    "# データの読み込み\n",
     "data_df = pd.read_csv('https://github.com/iwanami-datascience/vol3/raw/master/kato%26hoshino/q_data_x.csv')\n",
     "#data_df.head()"
    ]
@@ -71,11 +71,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### 説明変数\n",
-    "cols = [\"child_dummy\", \"area_kanto\", \"area_tokai\", \"area_keihanshin\", \n",
+    "# 説明変数\n",
+    "cols = [\"child_dummy\", \"area_kanto\", \"area_tokai\", \"area_keihanshin\",\n",
     "        \"T\", \"F1\", \"F2\", \"F3\", \"M1\", \"M2\"]\n",
     "\n",
-    "X = data_df[cols].copy()"
+    "X = data_df[cols]"
    ]
   },
   {
@@ -84,10 +84,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### Zラベルの作成\n",
+    "# Zラベルの作成\n",
     "Z_df = data_df[[\"cm_dummy\", \"gamedummy\"]].drop_duplicates()\n",
-    "Z_df[\"Z\"] = np.array([1,0,0,1])\n",
-    "data_df = pd.merge(data_df,Z_df,on=[\"cm_dummy\", \"gamedummy\"])"
+    "Z_df[\"Z\"] = np.array([1, 0, 0, 1])\n",
+    "data_df = pd.merge(data_df, Z_df, on=[\"cm_dummy\", \"gamedummy\"])"
    ]
   },
   {
@@ -96,7 +96,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### CMありをtreatment, CMなしをcontrolとする\n",
+    "# CMありをtreatment, CMなしをcontrolとする\n",
     "treat = (data_df.cm_dummy == 1).tolist()\n",
     "cv = (data_df.gamedummy == 1).tolist()\n",
     "z = (data_df.Z == 1).tolist()"
@@ -108,8 +108,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### train, test半分ずつに分ける\n",
-    "train_cv, test_cv, train_treat, test_treat, X_train, X_test, z_train, z_test = train_test_split(cv,treat,X,z,test_size=0.5,random_state=2)"
+    "# train, test半分ずつに分ける\n",
+    "train_cv, test_cv, train_treat, test_treat, X_train, X_test, z_train, z_test = train_test_split(cv, treat, X, z, test_size=0.5, random_state=2)"
    ]
   },
   {
@@ -118,7 +118,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### indexをリセット\n",
+    "# indexをリセット\n",
     "X_train = X_train.reset_index(drop=True)\n",
     "X_test = X_test.reset_index(drop=True)"
    ]
@@ -143,9 +143,9 @@
     }
    ],
    "source": [
-    "### Z=1となる確率を予測するロジスティック回帰モデル構築\n",
+    "# Z=1となる確率を予測するロジスティック回帰モデル構築\n",
     "lr_z = LogisticRegression(C=0.01)\n",
-    "lr_z.fit(X_train,z_train)"
+    "lr_z.fit(X_train, z_train)"
    ]
   },
   {
@@ -154,9 +154,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### z-scoreの算出(z-score = 2P(Z=1|X) - 1)\n",
-    "z_score = 2*lr_z.predict_proba(X_test)-1\n",
-    "z_score = (z_score[:,1]).tolist()"
+    "# z-scoreの算出(z-score = 2P(Z=1|X) - 1)\n",
+    "z_score = 2 * lr_z.predict_proba(X_test) - 1\n",
+    "z_score = (z_score[:, 1]).tolist()"
    ]
   },
   {
@@ -227,7 +227,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### データの読み込み\n",
+    "# データの読み込み\n",
     "data_df = pd.read_csv('https://github.com/iwanami-datascience/vol3/raw/master/kato%26hoshino/q_data_x.csv')\n",
     "#data_df.head()"
    ]
@@ -238,19 +238,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "###傾向スコアを求める\n",
-    "## 説明変数\n",
-    "cols_ = [\"age\", \"sex\", \"TVwatch_day\", \"marry_dummy\", \"child_dummy\", \"inc\", \"pmoney\", \n",
-    "         \"area_kanto\", \"area_tokai\",\"area_keihanshin\", \n",
+    "# 傾向スコアを求める\n",
+    "# 説明変数\n",
+    "cols_ = [\"age\", \"sex\", \"TVwatch_day\", \"marry_dummy\", \"child_dummy\", \"inc\", \"pmoney\",\n",
+    "         \"area_kanto\", \"area_tokai\", \"area_keihanshin\",\n",
     "         \"job_dummy1\", \"job_dummy2\", \"job_dummy3\", \"job_dummy4\", \"job_dummy5\", \"job_dummy6\",\n",
-    "         \"fam_str_dummy1\", \"fam_str_dummy2\", \"fam_str_dummy3\",\"fam_str_dummy4\"]\n",
+    "         \"fam_str_dummy1\", \"fam_str_dummy2\", \"fam_str_dummy3\", \"fam_str_dummy4\"]\n",
     "\n",
     "X_ = data_df[cols_].copy()\n",
     "\n",
-    "## 切片の導入\n",
+    "# 切片の導入\n",
     "X_.loc[:, \"Intercept\"] = 1\n",
     "\n",
-    "## CM視聴有無ダミー\n",
+    "# CM視聴有無ダミー\n",
     "z1 = data_df.cm_dummy"
    ]
   },
@@ -270,7 +270,7 @@
     }
    ],
    "source": [
-    "## StatsModelsのLogitにより傾向スコアを推定\n",
+    "# StatsModelsのLogitにより傾向スコアを推定\n",
     "glm = sm.Logit(z1, X_)\n",
     "result = glm.fit()\n",
     "ps = result.predict(X_)\n",
@@ -283,11 +283,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### Propensity Scoreで補正された目的変数を作成\n",
+    "# Propensity Scoreで補正された目的変数を作成\n",
     "data_df.loc[:, \"ps\"] = ps\n",
     "data_df.loc[:, \"adj_gamedummy\"] = 0\n",
-    "data_df.loc[data_df.cm_dummy == 1, \"adj_gamedummy\"] =  data_df.loc[data_df.cm_dummy == 1, \"gamedummy\"] / data_df.loc[data_df.cm_dummy == 1, \"ps\"]\n",
-    "data_df.loc[data_df.cm_dummy == 0, \"adj_gamedummy\"] =  -data_df.loc[data_df.cm_dummy == 0, \"gamedummy\"] / (1-data_df.loc[data_df.cm_dummy == 0, \"ps\"])\n",
+    "data_df.loc[data_df.cm_dummy == 1, \"adj_gamedummy\"] = data_df.loc[data_df.cm_dummy == 1, \"gamedummy\"] / data_df.loc[data_df.cm_dummy == 1, \"ps\"]\n",
+    "data_df.loc[data_df.cm_dummy == 0, \"adj_gamedummy\"] = -data_df.loc[data_df.cm_dummy == 0, \"gamedummy\"] / (1 - data_df.loc[data_df.cm_dummy == 0, \"ps\"])\n",
     "adj_z = data_df[[\"gamedummy\", \"adj_gamedummy\"]]"
    ]
   },
@@ -297,7 +297,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### CMありをtreatment, CMなしをcontrolとする\n",
+    "# CMありをtreatment, CMなしをcontrolとする\n",
     "treat = (data_df.cm_dummy == 1).tolist()\n",
     "cv = (data_df.gamedummy == 1).tolist()"
    ]
@@ -308,8 +308,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### train, test半分ずつに分ける\n",
-    "train_cv, test_cv, train_treat, test_treat, X_train, X_test, adj_z_train, adj_z_test = train_test_split(cv,treat,X,adj_z,test_size=0.5,random_state=2)"
+    "# train, test半分ずつに分ける\n",
+    "train_cv, test_cv, train_treat, test_treat, X_train, X_test, adj_z_train, adj_z_test = train_test_split(cv, treat, X, adj_z, test_size=0.5, random_state=2)"
    ]
   },
   {
@@ -318,7 +318,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### indexをリセット\n",
+    "# indexをリセット\n",
     "X_train = X_train.reset_index(drop=True)\n",
     "X_test = X_test.reset_index(drop=True)\n",
     "adj_z_train = adj_z_train.reset_index(drop=True)\n",
@@ -331,11 +331,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### ランダムフォレスト回帰を用いてZ-Scoreを予測するモデルを構築\n",
+    "# ランダムフォレスト回帰を用いてadj_z_scoreを予測するモデルを構築（ただし、補正によりadj_z_scoreは連続変数となっているため回帰している）\n",
     "rf = RandomForestRegressor(n_estimators=1000, max_depth=500)\n",
-    "rf.fit(X_train,adj_z_train.adj_gamedummy)\n",
+    "rf.fit(X_train, adj_z_train.adj_gamedummy)\n",
     "\n",
-    "### 補正されたZ-Scoreを予測\n",
+    "# 補正されたZ-Scoreを予測\n",
     "adj_z_score = rf.predict(X_test)"
    ]
   },
@@ -396,16 +396,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "child_dummy / -0.0845\n",
-      "area_kanto / -0.04\n",
-      "area_tokai / -0.0282\n",
-      "area_keihanshin / 0.0505\n",
-      "T / 0.2332\n",
-      "F1 / 0.0096\n",
-      "F2 / 0.0526\n",
-      "F3 / -0.0468\n",
-      "M1 / 0.0394\n",
-      "M2 / 0.1164\n"
+      "child_dummy / -0.0846\n",
+      "area_kanto / -0.0409\n",
+      "area_tokai / -0.029\n",
+      "area_keihanshin / 0.0516\n",
+      "T / 0.2284\n",
+      "F1 / 0.0088\n",
+      "F2 / 0.051\n",
+      "F3 / -0.0466\n",
+      "M1 / 0.0401\n",
+      "M2 / 0.1167\n"
      ]
     }
    ],
